Fixed misalignment of list items in mobile nav dropdown

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -291,6 +291,7 @@
 	
 	#header-nav-wrap { float: none; left: 0; margin-top: 10px; }
 	ul#header-menu { left: 0; margin-top: 0; }
+	ul#header-menu li { margin-right: 0 !important; }
 	ul#header-menu li.last a { color: #333; text-align: center; }
 	
 	#centerpiece_control { bottom: 10px; left: 10px; }
